page jump fix

--- a/sandbox/ydnittiw/css/style.css
+++ b/sandbox/ydnittiw/css/style.css
@@ -2,7 +2,6 @@ body{
 position:relative;
 background: url('../img/witt-seal.jpg') fixed center no-repeat #666;
 color: #FFF;
-padding-top: 70px;
 }
 a {
 color: #FFF;
